[package]
name = "waveutil-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-dll = "0.4.1"
winapi = { version = "0.3.9", features = ["processthreadsapi"] }
sysinfo = "0.28.2"
nwg = {version = "^1.0.13", package = "native-windows-gui"}
livesplit-hotkey = "0.6.0"
toml = "0.7.2"
serde = {version = "1.0.152"}

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
